# GUI_Core

./: .gitmodules  CMakeLists.txt  README.md  installDependencies.bat  installDependencies.sh
CMake/: config.h.in
example/: CMakeLists.txt  main.cpp
include/: GUI_Core.h  GUI_Helper.h  config.h  simState.h
include/3D/: BaseObject.h  BaseScene.h  Entity.h  Object.h  Scene.h
include/3D/Objects/: BaseObject.h  ObejctsHelper.h  ObjectsInclude.h
include/3D/Objects/DynamicObjects/: DO_Primitives.h  DynamicObject.h
include/3D/Objects/GroupObjects/: GO_Primitives.h  GroupObject.h
include/3D/Objects/MultiBodyObjects/: MultiBodyObject.h
include/3D/Objects/StaticObjects/: SO_Primitives.h  StaticObject.h
include/UI/: UIGraph.h  UIHelper.h  UIWindow.h  UIWindow_3DWorkspace.h  UIWindow_AddEntityDialog.h  UIWindow_Console.h  UIWindow_LibraryViewer.h  UIWindow_PlotingWorkspace.h  UIWindow_PropertiesViewer.h  UIWindow_SceneTreeViewer.h  UIWindow_ToolPanel.h
src/: GUI_Core.cpp  GUI_Helper.cpp
src/3D/: BaseScene.cpp  Folder.cpp  Object.cpp  Scene.cpp
src/3D/Objects/: BaseObject.cpp  ObjectsHelper.cpp
src/3D/Objects/DynamicObjects/: DO_Primitives.cpp  DynamicObject.cpp
src/3D/Objects/GroupObjects/: GO_Primitives.cpp  GroupObject.cpp
src/3D/Objects/MultiBodyObjects/: MultiBodyObject.cpp
src/3D/Objects/StaticObjects/: SO_Primitives.cpp  StaticObject.cpp
src/UI/: UIHelper.cpp  UIWindow_3DWorkspace.cpp  UIWindow_AddEntityDialog.cpp  UIWindow_Console.cpp  UIWindow_LibraryViewer.cpp  UIWindow_PlotingWorkspace.cpp  UIWindow_PropertiesViewer.cpp  UIWindow_SceneTreeViewer.cpp  UIWindow_ToolPanel.cpp
